<resources>
    <string name="app_name">Smart City</string>
    <string name="welcome">Welcome to the app</string>
    <string name="loginbutton">Login</string>
    <string name="notas">Notes</string>
    <string name="editbutton">Edit</string>
    <string name="removebutton">Remove</string>
    <string name="adicionarnota">Add note</string>
    <string name="voltarnota">Back</string>
    <string name="titulonota">My notes</string>
    <string name="description">description</string>
    <string name="submeternota">Submit</string>
    <string name="descricaonota">Note description</string>
    <string name="tituloaddnota">Note</string>
    <string name="helpnote">Insert the title of the note here ..</string>
    <string name="login">Please, insert username and password!!</string>
    <string name="empty_not_saved">Empty note.. Note not added..</string>
    <string name="nota">Note</string>
    <string name="helpnote2">Insert the description of the note here ..</string>
    <string name="titulomapa">Occurrences Map</string>
    <string name="addocorrencia">Add occurrence</string>
    <string name="logoutmapa">Logout</string>
    <string name="occurrence">Occurrence</string>
    <string name="occurrencetitle">Occurrence title</string>
    <string name="occurrencetitle2">Insert the title of the new occurrence</string>
    <string name="occurrencedescription">Occurrence description</string>
    <string name="occurrencedescription2">Insert the description of the new occurrence</string>
    <string name="anexar">Add file</string>
    <string name="login_p" translatable="false">login_p</string>
    <string name="id" translatable="false">id</string>
    <string name="login_shared" translatable="false">login_shared</string>
    <string name="nome" translatable="false">nome</string>
    <string name="errologin" translatable="false">Error in authentication..</string>
    <string name="title_activity_maps">Map</string>
    <string name="erromapa">Error showing map</string>
    <string name="filtro15km">Filter of 15 km</string>
    <string name="filtro35km">Filter of 35 km</string>
    <string name="filtro65km">Filter of 65 km</string>
    <string name="filtro4">Filter by accidents</string>
    <string name="filtro5">Filter by holes</string>
    <string name="filtro6">Filter by others</string>
    <string name="filtro7">Remove filters</string>
    <string name="coord">Coordinates successful..</string>
    <string name="sucesso">Insert with success</string>
    <string name="defaulttt">Default</string>
    <string name="quinze">15 KM</string>
    <string name="trinta">35 KM</string>
    <string name="acidente">Accident</string>
    <string name="holes">Holes</string>
    <string name="sess">65 KM</string>
    <string name="others">Others</string>
</resources>