<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/name"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:orientation="horizontal">

    <Button
        android:id="@+id/editbutton"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/editbutton"
        app:backgroundTint="#F44336"/>

    <Button
        android:id="@+id/removebutton"
        android:layout_width="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/removebutton"
        app:backgroundTint="#F44336"/>

    </LinearLayout>

</RelativeLayout>