<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapScreen">

    <TextView
        android:id="@+id/titlemap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/titulomapa"
        android:textSize="20dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_below="@id/titlemap"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/addocorrenciao"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/addocorrenciao"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/addocorrencia"
        android:onClick="addOccurrence"
        app:backgroundTint="#F44336" />

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="120dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="logout"
        android:text="@string/logoutmapa"
        app:backgroundTint="#F44336" />

</RelativeLayout>