<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MapsActivity">

<TextView
    android:id="@+id/titlemap"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="15dp"
    android:gravity="center"
    android:textStyle="bold"
    android:text="@string/titulomapa"
    android:textSize="20dp" />

<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:layout_marginTop="55dp"
    android:layout_marginBottom="110dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

<Button
    android:id="@+id/addocorrenciao"
    android:layout_width="200dp"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:text="@string/addocorrencia"
    android:onClick="addOccurrence"
    app:backgroundTint="#F44336" />

<Button
    android:id="@+id/logoutbutton"
    android:layout_width="120dp"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:onClick="logout"
    android:text="@string/logoutmapa"
    app:backgroundTint="#F44336" />

</RelativeLayout>